--- a/index.html
+++ b/index.html
@@ -62,74 +62,75 @@
     <main class="page-main">
       <h1 class="visually-hidden">Интернет-магазин гаджетов "DEVICE"</h1>
       <section>
+        <h2 class="visualy-hidden">Популярные товары</h2>
+        <input class="promo-slider-input" id="promo-control-1" type="radio" name="promo-control" checked>
+        <input class="promo-slider-input" id="promo-control-2" type="radio" name="promo-control">
+        <input class="promo-slider-input" id="promo-control-3" type="radio" name="promo-control">
+        <img src="images/slider-1.png" alt="Квадрокоптер" width="560" height="560">
+        <div class="promo-slider-text">
+          <b>Порхает как бабочка, жалит как пчела!</b>
+          <p>Этот обычный, на первый взгляд, квадрокоптер оснащен мощным лазером, замаскированным под стандартную
+            камеру.</p>
+          <a class="btn" href="#">Подробнее</a>
+          <table class="specifications">
+            <tr>
+              <th>800 м</th>
+              <th>50 м</th>
+            </tr>
+            <tr>
+              <td>Дальность полета</td>
+              <td>Радиус поражения</td>
+            </tr>
+          </table>
+        </div>
         <div class="promo-slider">
-          <h2 class="visualy-hidden">Популярные товары</h2>
-          <input class="promo-slider-input" id="promo-control-1" type="radio" name="promo-control" checked>
-          <input class="promo-slider-input" id="promo-control-2" type="radio" name="promo-control">
-          <input class="promo-slider-input" id="promo-control-3" type="radio" name="promo-control">
-          <img src="images/slider-1.png" alt="Квадрокоптер" width="560" height="560">
+          <img src="images/slider-2.png" alt="Фитнес-браслет" width="560" height="560">
           <div class="promo-slider-text">
-            <b>Порхает как бабочка, жалит как пчела!</b>
-            <p>Этот обычный, на первый взгляд, квадрокоптер оснащен мощным лазером, замаскированным под стандартную камеру.</p>
+            <b>Худеем правильно!</b>
+            <p>Мотивирующие фитнес-браслеты помогут найти в себе силы не пропускать занятия и соблюдать диету.</p>
             <a class="btn" href="#">Подробнее</a>
-            <table>
+            <table class="specifications">
               <tr>
-                <th>800 м</th>
-                <th>50 м</th>
+                <th>48 часов</th>
               </tr>
               <tr>
-                <td>Дальность полета</td>
-                <td>Радиус поражения</td>
+                <td>Без подзарядки</td>
               </tr>
             </table>
           </div>
-          <div class="promo-slider">
-            <img src="images/slider-2.png" alt="Фитнес-браслет" width="560" height="560">
-            <div class="promo-slider-text">
-              <b>Худеем правильно!</b>
-              <p>Мотивирующие фитнес-браслеты помогут найти в себе силы не пропускать занятия и соблюдать диету.</p>
-              <a class="btn" href="#">Подробнее</a>
-              <table>
-                <tr>
-                  <th>48 часов</th>
-                </tr>
-                <tr>
-                  <td>Без подзарядки</td>
-                </tr>
-              </table>
-            </div>
+        </div>
+        <div class="promo-slider-item">
+          <img src="images/slider-3.png" alt="Самая длинная палка для селфи" width="560" height="560">
+          <div class="promo-slider-text">
+            <b>Делай селфи,как Бен Стиллер!</b>
+            <p>Самая длинная палка для селфи доступна в нашем магазине. Восемь (Восемь, Карл!) метров длиной и весом
+              всего 5 килограмм.</p>
+            <a class="btn" href="#">Подробнее</a>
+            <table class="specifications">
+              <tr>
+                <th>8,5 м</th>
+                <th>5 кг</th>
+                <th>Карбон</th>
+              </tr>
+              <tr>
+                <td>Длина палки</td>
+                <td>Вес палки</td>
+                <td>Материал</td>
+              </tr>
+            </table>
           </div>
-          <div class="promo-slider-item">
-            <img src="images/slider-3.png" alt="Самая длинная палка для селфи" width="560" height="560">
-            <div class="promo-slider-text">
-              <b>Делай селфи,как Бен Стиллер!</b>
-              <p>Самая длинная палка для селфи доступна в нашем магазине. Восемь (Восемь, Карл!) метров длиной и весом всего 5 килограмм.</p>
-              <a class="btn" href="#">Подробнее</a>
-              <table>
-                <tr>
-                  <th>8,5 м</th>
-                  <th>5 кг</th>
-                  <th>Карбон</th>
-                </tr>
-                <tr>
-                  <td>Длина палки</td>
-                  <td>Вес палки</td>
-                  <td>Материал</td>
-                </tr>
-              </table>
-            </div>
-          </div>
-          <div class="promo-slider-controls">
-            <label class="promo-slider-control" for="promo-control-1">
-              <span class="visually-hidden">Первый слайд</span>
-            </label>
-            <label class="promo-slider-control" for="promo-control-2">
-              <span class="visually-hidden">Второй слайд</span>
-            </label>
-            <label class="promo-slider-control" for="promo-control-3">
-              <span class="visually-hidden">Третий слайд</span>
-            </label>
-          </div>
+        </div>
+        <div class="promo-slider-controls">
+          <label class="promo-slider-control" for="promo-control-1">
+            <span class="visually-hidden">Первый слайд</span>
+          </label>
+          <label class="promo-slider-control" for="promo-control-2">
+            <span class="visually-hidden">Второй слайд</span>
+          </label>
+          <label class="promo-slider-control" for="promo-control-3">
+            <span class="visually-hidden">Третий слайд</span>
+          </label>
+        </div>
       </section>
       <section class="main-goods">
         <h2 class="visually-hidden">Категории товаров</h2>
@@ -154,39 +155,37 @@
           </li>
         </ul>
       </section>
-      <div class="container">
-        <div class="services-slider-wrap">
-          <h2 class="visually-hidden">Наши сервисы</h2>
-          <input class="services-slider-input  visually-hidden" id="services-control-1" type="radio"
-            name="services-control" checked>
-          <input class="services-slider-input  visually-hidden" id="services-control-2" type="radio"
-            name="services-control">
-          <input class="services-slider-input  visually-hidden" id="services-control-3" type="radio"
-            name="services-control">
-          <div class="services-slider-item">
-            <h2>Доставка</h2>
-            <p>Мы с удовольствием доставим ваш товар прямо к вашему подъезду совершенно бесплатно! Ведь мы неплохо
-              заработаем, поднимая его на ваш этаж.</p>
-          </div>
-          <div class="services-slider-item">
-            <h2>Гарантия</h2>
-            <p>Если из-за возгорания купленного у нас товара у вас сгорит дом - не переживайте, мы выдадим вам
-              новый.Товар, не дом, конечно же.</p>
-          </div>
-          <div class="services-slider-item">
-            <h2>Кредит</h2>
-            <p>Залезть в долговую яму стало проще! Кредитные консультанты подберут для вас наиболее выгодные условия
-              кредита. Выгодные для нашего банка, разумеется.</p>
-          </div>
-          <div class="services-slider-controls">
-            <label class="services-slider-control  services-slider-control-active"
-              for="services-control-1">Доставка</label>
-            <label class="services-slider-control" for="services-control-2">Гарантия</label>
-            <label class="services-slider-control" for="services-control-3">Кредит</label>
-          </div>
+      <div class="services-slider-wrap">
+        <h2 class="visually-hidden">Наши сервисы</h2>
+        <input class="services-slider-input  visually-hidden" id="services-control-1" type="radio"
+          name="services-control" checked>
+        <input class="services-slider-input  visually-hidden" id="services-control-2" type="radio"
+          name="services-control">
+        <input class="services-slider-input  visually-hidden" id="services-control-3" type="radio"
+          name="services-control">
+        <div class="services-slider-item">
+          <h2>Доставка</h2>
+          <p>Мы с удовольствием доставим ваш товар прямо к вашему подъезду совершенно бесплатно! Ведь мы неплохо
+            заработаем, поднимая его на ваш этаж.</p>
+        </div>
+        <div class="services-slider-item">
+          <h2>Гарантия</h2>
+          <p>Если из-за возгорания купленного у нас товара у вас сгорит дом - не переживайте, мы выдадим вам
+            новый.Товар, не дом, конечно же.</p>
+        </div>
+        <div class="services-slider-item">
+          <h2>Кредит</h2>
+          <p>Залезть в долговую яму стало проще! Кредитные консультанты подберут для вас наиболее выгодные условия
+            кредита. Выгодные для нашего банка, разумеется.</p>
+        </div>
+        <div class="services-slider-controls">
+          <label class="services-slider-control  services-slider-control-active"
+            for="services-control-1">Доставка</label>
+          <label class="services-slider-control" for="services-control-2">Гарантия</label>
+          <label class="services-slider-control" for="services-control-3">Кредит</label>
         </div>
       </div>
-      <section class="information">
+      <div class="container">
         <div class="delivery-order">
           <span>Доставим редкий товар под заказ</span>
         </div>
@@ -213,8 +212,9 @@
             <a class="btn" href="#">Напишите нам</a>
           </div>
         </div>
-      </section>
+      </div>
       <section class="subscribe">
+        <h2 class="visually-hidden">Подписка на рассылку</h2>
         <b>Подпишитесь на рассылку</b>
         <p>Еженедельный дайджест с обзорами новинок, длительными тест-драйвами, распаковками, а также акции,
           спецпредложения и вот это вот всё.</p>
