--- a/index.html
+++ b/index.html
@@ -19,42 +19,42 @@
               <button class="navigation-form-button" type="submit">Найти</button>
             </form>
           </li>
-          <li class="navigation-login">
-            <a class="navigation-link-login" href="#">Войти</a>
+          <li class="navigation-user-login">
+            <a class="navigation-link" href="#">Войти</a>
           </li>
-          <li class="navigation-compare">
-            <a class="navigation-link-compare" href="#">Сравнить</a>
+          <li class="navigation-user-compare">
+            <a class="navigation-link" href="#">Сравнить</a>
           </li>
-          <li class="navigation-cart">
-            <a class="navigation-link-cart" href="#">Корзина</a>
+          <li class="navigation-user-cart">
+            <a class="navigation-link" href="#">Корзина</a>
           </li>
         </ul>
-        <ul class="navigation-main-list">
-          <li class="navigation-main-catalog">
-            <a class="navigation-main-product" href="#">Каталог товаров</a>
+        <ul class="navigation-main">
+          <li class="navigation-main-item">
+            <a class="navigation-main-link" href="#">Каталог товаров</a>
             <ul class="sub-menu-list">
               <li class="sub-menu-item">
-                <a href="#">Виртуальная реальность</a>
-                <a href="#">Моноподы для селфи</a>
-                <a href="#">Экшен камеры</a>
+                <a class="sub-menu-link" href="#">Виртуальная реальность</a>
+                <a class="sub-menu-link" href="#">Моноподы для селфи</a>
+                <a class="sub-menu-link" href="#">Экшен камеры</a>
               </li>
               <li class="sub-menu-item">
-                <a href="#">Фитнес-браслеты</a>
-                <a href="#">Умные часы</a>
+                <a class="sub-menu-link" href="#">Фитнес-браслеты</a>
+                <a class="sub-menu-link" href="#">Умные часы</a>
               </li>
               <li class="sub-menu-item">
-                <a href="#">Квадрокоптеры</a>
+                <a class="sub-menu-link" href="#">Квадрокоптеры</a>
               </li>
             </ul>
           </li>
           <li class="navigation-main-item">
-            <a href="#">Доставка</a>
+            <a class="navigation-main-link" href="#">Доставка</a>
           </li>
           <li class="navigation-main-item">
-            <a href="#">Гарантия</a>
+            <a class="navigation-main-link" href="#">Гарантия</a>
           </li>
           <li class="navigation-main-item">
-            <a href="#">Контакты</a>
+            <a class="navigation-main-link" href="#">Контакты</a>
           </li>
         </ul>
       </nav>
@@ -188,7 +188,7 @@
         </div>
       </div>
       <div class="container">
-        <p>Доставим редкий товар под заказ</p>
+        <p class="rare product">Доставим редкий товар под заказ</p>
         <div class="about-us-contacts">
           <div class="about-us">
             <h2>О нас</h2>
@@ -232,28 +232,28 @@
       <div class="page-footer-info">
         <adress>Санкт-Петербург, набережная реки Карповки, 5, литера П.</adress>
         <div class="page-footer-services">
-          <a class="page-footer-services-item" href="#">Доставка</a>
-          <a class="page-footer-services-item" href="#">Гарантия</a>
-          <a class="page-footer-services-item" href="#">Контакты</a>
+          <a class="page-footer-link" href="#">Доставка</a>
+          <a class="page-footer-link" href="#">Гарантия</a>
+          <a class="page-footer-link" href="#">Контакты</a>
         </div>
         <div class="page-footer-phone">
-          <a href="tel:+78128121212">Тел.: +7 (812) 812-12-12</a>
+          <a class="page-footer-link" href="tel:+78128121212">Тел.: +7 (812) 812-12-12</a>
         </div>
       </div>
       <div class="page-footer-links">
         <ul class="page-footer-links-list">
           <li class="page-footer-links-item">
-            <a class="page-footer-links" href="#">
+            <a class="page-footer-link" href="#">
               <span class="visually-hidden">Facebook</span>
             </a>
           </li>
           <li class="page-footer-links-item">
-            <a class="page-footer-links" href="#">
+            <a class="page-footer-link" href="#">
               <span class="visually-hidden">Instagram</span>
             </a>
           </li>
           <li class="page-footer-links-item">
-            <a class="page-footer-links" href="#">
+            <a class="page-footer-link" href="#">
               <span class="visually-hidden">Twitter</span>
             </a>
           </li>
