:heavy_check_mark: Сборка #2

--- a/2/catalog.html
+++ b/2/catalog.html
@@ -7,16 +7,16 @@
 </head>
   <body>
     <header class="page-header">
-      <a><img class="logo" src="images/header/device.svg" alt="DEVICE" width="145" height="36"></a>
+      <a href="index.html"><img class="logo" src="images/header/device.svg" alt="DEVICE" width="145" height="36"></a>
       <nav class="navigation">
         <ul class="navigation-user">
           <li class="navigation-user-search">
             <form class="navigation-form" method="get" action="https://echo.htmlacademy.ru">
               <input class="navigation-form-input" id="search" type="search" name="search" placeholder="Поиск по сайту">
-              <button class="navigation-form-button" type="submit">Найти</button>
               <label class="navigation-form-label" for="search">
                 <span class="visually-hidden">Поиск:</span>
               </label>
+              <button class="navigation-form-button" type="submit">Найти</button>
             </form>
           </li>
           <li class="navigation-login">
@@ -152,7 +152,6 @@
             <img class="goods-item-img" src="images/selfy-1.jpg" alt="Любительская селфи-палка" width="360"
               height="380">
             <div class="goods-item-hover">
-              <a class="btn" href="#">В корзину</a>
               <a class="goods-item-add" href="#">Подробнее</a>
             </div>
             <div class="goods-item-info">
@@ -164,7 +163,6 @@
             <img class="goods-item-img" src="images/selfy-2.jpg" alt="Профессиональная селфи-палка" width="360"
               height="380">
             <div class="goods-item-hover">
-              <a class="btn" href="#">В корзину</a>
               <a class="goods-item-add" href="#">Подробнее</a>
             </div>
             <div class="goods-item-info">
@@ -176,7 +174,6 @@
             <img class="goods-item-img" src="images/selfy-3.jpg" alt="Непотопляемая селфи-палка" width="360"
               height="380">
             <div class="goods-item-hover">
-              <a class="btn" href="#">В корзину</a>
               <a class="goods-item-add" href="#">Подробнее</a>
             </div>
             <div class="goods-item-info">
@@ -188,7 +185,6 @@
             <img class="goods-item-img" src="images/selfy-4.jpg" alt="Селфи-палка «Следуй за мной»" width="360"
               height="380">
             <div class="goods-item-hover">
-              <a class="btn" href="#">В корзину</a>
               <a class="goods-item-add" href="#">Подробнее</a>
             </div>
             <div class="goods-item-info">
