--- a/2/index.html
+++ b/2/index.html
@@ -14,48 +14,48 @@
           <li class="navigation-user-search">
             <form class="navigation-form" method="get" action="https://echo.htmlacademy.ru">
               <input class="navigation-form-input" id="search" type="search" name="search" placeholder="Поиск по сайту">
-              <button class="navigation-form-button" type="submit">Найти</button>
               <label class="navigation-form-label" for="search">
                 <span class="visually-hidden">Поиск:</span>
               </label>
+              <button class="navigation-form-button" type="submit">Найти</button>
             </form>
           </li>
-          <li class="navigation-login">
-            <a class="navigation-link-login" href="#">Войти</a>
+          <li class="navigation-user-login">
+            <a class="navigation-link" href="#">Войти</a>
           </li>
-          <li class="navigation-compare">
-            <a class="navigation-link-compare" href="#">Сравнить</a>
+          <li class="navigation-user-compare">
+            <a class="navigation-link" href="#">Сравнить</a>
           </li>
-          <li class="navigation-cart">
-            <a class="navigation-link-cart" href="#">Корзина</a>
+          <li class="navigation-user-cart">
+            <a class="navigation-link" href="#">Корзина</a>
           </li>
         </ul>
-        <ul class="navigation-main-list">
-          <li class="navigation-main-catalog">
-            <a class="navigation-main-product" href="#">Каталог товаров</a>
+        <ul class="navigation-main">
+          <li class="navigation-main-item">
+            <a class="navigation-main-link" href="#">Каталог товаров</a>
             <ul class="sub-menu-list">
               <li class="sub-menu-item">
-                <a href="#">Виртуальная реальность</a>
-                <a href="#">Моноподы для селфи</a>
-                <a href="#">Экшен камеры</a>
+                <a class="sub-menu-link" href="#">Виртуальная реальность</a>
+                <a class="sub-menu-link" href="#">Моноподы для селфи</a>
+                <a class="sub-menu-link" href="#">Экшен камеры</a>
               </li>
               <li class="sub-menu-item">
-                <a href="#">Фитнес-браслеты</a>
-                <a href="#">Умные часы</a>
+                <a class="sub-menu-link" href="#">Фитнес-браслеты</a>
+                <a class="sub-menu-link" href="#">Умные часы</a>
               </li>
               <li class="sub-menu-item">
-                <a href="#">Квадрокоптеры</a>
+                <a class="sub-menu-link" href="#">Квадрокоптеры</a>
               </li>
             </ul>
           </li>
           <li class="navigation-main-item">
-            <a href="#">Доставка</a>
+            <a class="navigation-main-link" href="#">Доставка</a>
           </li>
           <li class="navigation-main-item">
-            <a href="#">Гарантия</a>
+            <a class="navigation-main-link" href="#">Гарантия</a>
           </li>
           <li class="navigation-main-item">
-            <a href="#">Контакты</a>
+            <a class="navigation-main-link" href="#">Контакты</a>
           </li>
         </ul>
       </nav>
@@ -64,25 +64,38 @@
       <h1 class="visually-hidden">Интернет-магазин гаджетов "DEVICE"</h1>
       <section>
         <h2 class="visualy-hidden">Популярные товары</h2>
-        <input class="promo-slider-input" id="promo-control-1" type="radio" name="promo-control" checked>
-        <input class="promo-slider-input" id="promo-control-2" type="radio" name="promo-control">
-        <input class="promo-slider-input" id="promo-control-3" type="radio" name="promo-control">
-        <img src="images/slider-1.png" alt="Квадрокоптер" width="560" height="560">
-        <div class="promo-slider-text">
-          <b>Порхает как бабочка, жалит как пчела!</b>
-          <p>Этот обычный, на первый взгляд, квадрокоптер оснащен мощным лазером, замаскированным под стандартную
-            камеру.</p>
-          <a class="btn" href="#">Подробнее</a>
-          <table class="specifications">
-            <tr>
-              <th>800 м</th>
-              <th>50 м</th>
-            </tr>
-            <tr>
-              <td>Дальность полета</td>
-              <td>Радиус поражения</td>
-            </tr>
-          </table>
+        <div class="promo-slider-controls">
+          <input class="promo-slider-input" id="promo-control-1" type="radio" name="promo-control" checked>
+          <label class="promo-slider-control" for="promo-control-1">
+            <span class="visually-hidden">Первый слайд</span>
+          </label>
+          <input class="promo-slider-input" id="promo-control-2" type="radio" name="promo-control">
+          <label class="promo-slider-control" for="promo-control-2">
+            <span class="visually-hidden">Второй слайд</span>
+          </label>
+          <input class="promo-slider-input" id="promo-control-3" type="radio" name="promo-control">
+          <label class="promo-slider-control" for="promo-control-3">
+            <span class="visually-hidden">Третий слайд</span>
+          </label>
+        </div>
+        <div class="promo-slider">
+          <img src="images/slider-1.png" alt="Квадрокоптер" width="560" height="560">
+          <div class="promo-slider-text">
+            <b>Порхает как бабочка, жалит как пчела!</b>
+            <p>Этот обычный, на первый взгляд, квадрокоптер оснащен мощным лазером, замаскированным под стандартную
+              камеру.</p>
+            <a class="btn" href="#">Подробнее</a>
+            <table class="specifications">
+              <tr>
+                <th>800 м</th>
+                <th>50 м</th>
+              </tr>
+              <tr>
+                <td>Дальность полета</td>
+                <td>Радиус поражения</td>
+              </tr>
+            </table>
+          </div>
         </div>
         <div class="promo-slider">
           <img src="images/slider-2.png" alt="Фитнес-браслет" width="560" height="560">
@@ -100,7 +113,7 @@
             </table>
           </div>
         </div>
-        <div class="promo-slider-item">
+        <div class="promo-slider">
           <img src="images/slider-3.png" alt="Самая длинная палка для селфи" width="560" height="560">
           <div class="promo-slider-text">
             <b>Делай селфи,как Бен Стиллер!</b>
@@ -120,17 +133,6 @@
               </tr>
             </table>
           </div>
-        </div>
-        <div class="promo-slider-controls">
-          <label class="promo-slider-control" for="promo-control-1">
-            <span class="visually-hidden">Первый слайд</span>
-          </label>
-          <label class="promo-slider-control" for="promo-control-2">
-            <span class="visually-hidden">Второй слайд</span>
-          </label>
-          <label class="promo-slider-control" for="promo-control-3">
-            <span class="visually-hidden">Третий слайд</span>
-          </label>
         </div>
       </section>
       <section class="main-goods">
@@ -158,38 +160,36 @@
       </section>
       <div class="services-slider-wrap">
         <h2 class="visually-hidden">Наши сервисы</h2>
-        <input class="services-slider-input  visually-hidden" id="services-control-1" type="radio"
-          name="services-control" checked>
-        <input class="services-slider-input  visually-hidden" id="services-control-2" type="radio"
-          name="services-control">
-        <input class="services-slider-input  visually-hidden" id="services-control-3" type="radio"
-          name="services-control">
+        <div class="service-sleder-controls">
+          <input class="services-slider-input  visually-hidden" id="services-control-1" type="radio"
+            name="services-control" checked>
+          <label class="services-slider-control  services-slider-control-active"
+            for="services-control-1">Доставка</label>
+          <input class="services-slider-input  visually-hidden" id="services-control-2" type="radio"
+            name="services-control">
+          <label class="services-slider-control" for="services-control-2">Гарантия</label>
+          <input class="services-slider-input  visually-hidden" id="services-control-3" type="radio"
+            name="services-control">
+          <label class="services-slider-control" for="services-control-3">Кредит</label>
+        </div>
         <div class="services-slider-item">
-          <h2>Доставка</h2>
+          <b>Доставка</b>
           <p>Мы с удовольствием доставим ваш товар прямо к вашему подъезду совершенно бесплатно! Ведь мы неплохо
             заработаем, поднимая его на ваш этаж.</p>
         </div>
         <div class="services-slider-item">
-          <h2>Гарантия</h2>
+          <b>Гарантия</b>
           <p>Если из-за возгорания купленного у нас товара у вас сгорит дом - не переживайте, мы выдадим вам
             новый.Товар, не дом, конечно же.</p>
         </div>
         <div class="services-slider-item">
-          <h2>Кредит</h2>
+          <b>Кредит</b>
           <p>Залезть в долговую яму стало проще! Кредитные консультанты подберут для вас наиболее выгодные условия
             кредита. Выгодные для нашего банка, разумеется.</p>
         </div>
-        <div class="services-slider-controls">
-          <label class="services-slider-control  services-slider-control-active"
-            for="services-control-1">Доставка</label>
-          <label class="services-slider-control" for="services-control-2">Гарантия</label>
-          <label class="services-slider-control" for="services-control-3">Кредит</label>
-        </div>
       </div>
       <div class="container">
-        <div class="delivery-order">
-          <span>Доставим редкий товар под заказ</span>
-        </div>
+        <p class="rare product">Доставим редкий товар под заказ</p>
         <div class="about-us-contacts">
           <div class="about-us">
             <h2>О нас</h2>
@@ -207,9 +207,10 @@
             <p>Вы можете забрать товар сами, заехав в наш офис.
               Заодно сможете проверить работоспособность покупки. </p>
             <b>Интернет-магазин «Девайс»</b>
-            <p>Санкт-Петербург, набережная реки Карповки, 5, литера П.<a href="tel:+78128121212">+7(812)812-12-12</a>
-            </p>
-            <b>Время работы</b> пн—пт: с 10:00 до 22:00 сб—вс: с 10:00 до 19:00
+            <adress>Санкт-Петербург, набережная реки Карповки, 5, литера П.<a href="tel:+78128121212">+7(812)812-12-12</a>
+            </adress>
+            <b>Время работы</b>
+            <p>пн—пт: с 10:00 до 22:00 сб—вс: с 10:00 до 19:00</p>
             <a class="btn" href="#">Напишите нам</a>
           </div>
         </div>
@@ -232,34 +233,34 @@
       <div class="page-footer-info">
         <adress>Санкт-Петербург, набережная реки Карповки, 5, литера П.</adress>
         <div class="page-footer-services">
-          <a class="page-footer-services-item" href="#">Доставка</a>
-          <a class="page-footer-services-item" href="#">Гарантия</a>
-          <a class="page-footer-services-item" href="#">Контакты</a>
+          <a class="page-footer-link" href="#">Доставка</a>
+          <a class="page-footer-link" href="#">Гарантия</a>
+          <a class="page-footer-link" href="#">Контакты</a>
         </div>
         <div class="page-footer-phone">
-          <a href="tel:+78128121212">Тел.: +7 (812) 812-12-12</a>
+          <a class="page-footer-link" href="tel:+78128121212">Тел.: +7 (812) 812-12-12</a>
         </div>
       </div>
       <div class="page-footer-links">
         <ul class="page-footer-links-list">
           <li class="page-footer-links-item">
-            <a class="page-footer-links-fb" href="#">
+            <a class="page-footer-link" href="#">
               <span class="visually-hidden">Facebook</span>
             </a>
           </li>
           <li class="page-footer-links-item">
-            <a class="page-footer-links-inst" href="#">
+            <a class="page-footer-link" href="#">
               <span class="visually-hidden">Instagram</span>
             </a>
           </li>
           <li class="page-footer-links-item">
-            <a class="page-footer-links-tw" href="#">
+            <a class="page-footer-link" href="#">
               <span class="visually-hidden">Twitter</span>
             </a>
           </li>
         </ul>
         <div class="page-footer-copyright">
-          <a href="#"><img src="images/logo-2.svg" alt="HTML Academy" width="115" height="33"></a>
+          <img src="images/logo-2.svg" alt="HTML Academy" width="115" height="33">
         </div>
       </div>
     </footer>
