--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <header class="page-header">
       <a><img class="logo" src="images/header/device.svg" alt="DEVICE" width="145" height="36"></a>
       <nav class="navigation">
-        <ul class="navigation-user">
+        <ul class="navigation-user-list">
           <li class="navigation-user-search">
             <form class="navigation-form" method="get" action="https://echo.htmlacademy.ru">
               <input class="navigation-form-input" id="search" type="search" name="search" placeholder="Поиск по сайту">
@@ -29,7 +29,7 @@
             <a class="navigation-link" href="#">Корзина</a>
           </li>
         </ul>
-        <ul class="navigation-main">
+        <ul class="navigation-main-list">
           <li class="navigation-main-item">
             <a class="navigation-main-link" href="#">Каталог товаров</a>
             <ul class="sub-menu-list">
@@ -79,9 +79,9 @@
         </div>
         <div class="promo-slider">
           <img src="images/slider-1.png" alt="Квадрокоптер" width="560" height="560">
-          <div class="promo-slider-text">
-            <b>Порхает как бабочка, жалит как пчела!</b>
-            <p>Этот обычный, на первый взгляд, квадрокоптер оснащен мощным лазером, замаскированным под стандартную
+          <div class="promo-slider-info">
+            <b class="promo-slider-text-header">Порхает как бабочка, жалит как пчела!</b>
+            <p class="promo-slider-text-main">Этот обычный, на первый взгляд, квадрокоптер оснащен мощным лазером, замаскированным под стандартную
               камеру.</p>
             <a class="btn" href="#">Подробнее</a>
             <table class="specifications">
@@ -98,9 +98,9 @@
         </div>
         <div class="promo-slider">
           <img src="images/slider-2.png" alt="Фитнес-браслет" width="560" height="560">
-          <div class="promo-slider-text">
-            <b>Худеем правильно!</b>
-            <p>Мотивирующие фитнес-браслеты помогут найти в себе силы не пропускать занятия и соблюдать диету.</p>
+          <div class="promo-slider-info">
+            <b class="promo-slider-text-header">Худеем правильно!</b>
+            <p class="promo-slider-text-main">Мотивирующие фитнес-браслеты помогут найти в себе силы не пропускать занятия и соблюдать диету.</p>
             <a class="btn" href="#">Подробнее</a>
             <table class="specifications">
               <tr>
@@ -114,9 +114,9 @@
         </div>
         <div class="promo-slider">
           <img src="images/slider-3.png" alt="Самая длинная палка для селфи" width="560" height="560">
-          <div class="promo-slider-text">
-            <b>Делай селфи,как Бен Стиллер!</b>
-            <p>Самая длинная палка для селфи доступна в нашем магазине. Восемь (Восемь, Карл!) метров длиной и весом
+          <div class="promo-slider-info">
+            <b class="promo-slider-text-header">Делай селфи,как Бен Стиллер!</b>
+            <p class="promo-slider-text-main">Самая длинная палка для селфи доступна в нашем магазине. Восемь (Восемь, Карл!) метров длиной и весом
               всего 5 килограмм.</p>
             <a class="btn" href="#">Подробнее</a>
             <table class="specifications">
